# MiniKv

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: opencode-learning-plan.md
include/minikv/: kv.h  options.h
include/minikv/memtable/: memtable.h
include/minikv/wal/: wal.h
src/: kv.cpp  main.cpp
src/memtable/: memtable.cpp  skiplist.h
src/wal/: crc32.h  wal.cpp
tests/: test_kv.cpp  test_memtable.cpp  test_wal.cpp
